Wed Aug 18 14:48:33 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: fix path
	* doc/debugging.txt: add .gdbinit hint

Wed Aug 18 13:07:03 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* TODO: updated
	* doc/debugging.txt: added doc on how to debug gamin
	* libgamin/Makefile.am libgamin/gam_fork.c server/Makefile.am:
	  moved gam_server to /usr/libexec instead of /usr/bin following
	  Mark suggestion

Tue Aug 17 17:48:05 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c: working on fixing file checking notification
	* server/gam_poll.c server/gam_poll.h: start on integrating polling

Tue Aug 17 16:57:58 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_server.c: a bit of framework which looks safe too

Tue Aug 17 16:55:16 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gam_tree.c: cleanup while chasing regression in make tests

Thu Aug 12 19:44:02 EDT 2004 Daniel Veillard <veillard@redhat.com>

	* tests/Makefile.am: use $GAMIN_DEBUG_SERVER so that regression
	  tests can be run in a clean environment.

Thu Aug 12 13:42:22 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/Makefile.am: fix build on x86_64. Auto* is excessively
	  arcane and buggy, end-up copying the files on the libgamin dir.
	* server/gam_connection.c server/gam_poll.c server/gam_subscription.c
	  server/gam_subscription.h tests/testing.c: more testing more debug
	  messages.

Wed Aug 11 13:18:04 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in lib/Makefile.am libgamin/Makefile.am libgamin/gam_fork.c
	  server/Makefile.am server/gam_dnotify.c server/gam_inotify.c 
	  server/gam_node.c server/gam_node.hserver/gam_poll.c server/gam_tree.c
	  server/gam_server.c: cleanup patch from John McCutchan removing
	  comented out thread code, modularization of makefiles, and
	  use of $GAMIN_DEBUG_SERVER for debug or test when the client forks
	  a new server.
